clusters/pi-cluster/flux-system/openhie-apps/02-hapi-fhir-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hapi-fhir-jpaserver
  namespace: default
  labels:
    app.kubernetes.io/name: hapi-fhir-jpaserver
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hapi-fhir-jpaserver
