clusters/pi-cluster/flux-system/openhie-apps/02-hapi-fhir-release.yaml
# clusters\pi-cluster\flux-system\openhie-apps\02-hapi-fhir-release.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hapi-fhir-ingress
  namespace: default
  # annotations:
  #   # For Tailscale ingress, you may need these annotations
  #   tailscale.com/funnel: "true"  # Optional: enables Tailscale Funnel
  labels:
    app.kubernetes.io/name: hapi-fhir-jpaserver
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
      - portainer
  rules:
    - host: cdr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hapi-fhir-jpaserver
                port:
                  number: 8080
